Fix page flow getting stuck, put all buttons up top

--- a/css/style.scss
+++ b/css/style.scss
@@ -15,19 +15,17 @@ html, body {
     left: 0;
     top: 0;
 
-    transition: left 0.2s ease-in-out;
+    transition: margin-left 0.2s ease-in-out;
     // transition: opacity 0.4s ease-in;
     &.passed, &.todo {
         // opacity: 0;
         pointer-events: none;
     }
     &.passed {
-        left: -100vw;
-        left: calc(-100vw);
+        margin-left: -100vw;
     }
     &.todo {
-        left: 100vw;
-        left: calc(100vw);
+        margin-left: 100vw;
     }
 }
 
@@ -41,6 +39,13 @@ body {
     margin: 0 auto;
 }
 
+.buttonList {
+    display: flex;
+    justify-content: center;
+    > button {
+        margin: 0 .5em;
+    }
+}
 .button {
     background: rgba(241, 241, 241, .19);
     color: rgba(241, 241, 241, .87);
@@ -58,7 +63,6 @@ body {
     }
     &.smol {
         font-size: 1em;
-        padding: .4em .5em;
     }
 }
 
@@ -97,9 +101,10 @@ body {
 p.footer {
     display: block;
     text-align: center;
-    padding-top: 1.2em;
+    padding-top: 2.3em;
     font-size: 0.9em;
-    color: #eef;
+    color: #edf2f9;
+    opacity: .9;
     a {
         text-decoration: none;
         font-style: italic;
